# topics

./: CMakeLists.txt  README.md
_2_bit_manipulation/: _1_and_then_there_were_k.cpp  _2_counter_game.cpp  _3_sansa_and_xor.cpp  _4_and_product.cpp  _5_the_great_xor.cpp  _6_a_xor_challange.cpp
_3_stack_and_queue/: _2_queue_implementation.cpp  _3_stack_next_element.cpp  _4_stack_stock_span.cpp  _5_stack_maximum_area_histogram.cpp
_4_linked_list/: _1_reverse_linked_list.cpp
_5_recursion/: _10_print_all_permutations.cpp  _11_source_to_destination.cpp  _1_counting.cpp  _2_factorial.cpp  _3_fibonacci.cpp  _4_spell_counting.cpp  _5_exponent.cpp  _6_sorted_or_not.cpp  _7_generate_power_set.cpp  _8_total_number_of_ways_to_reach_destination.cpp  _9_generate_sub_sequences.cpp
